src/objects/Geo_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Group__c</fullName>
        <label>Geo Group</label>
        <referenceTo>Geo_Group__c</referenceTo>
        <relationshipLabel>Geo Group Members</relationshipLabel>
        <relationshipName>Geo_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Assigned__c</fullName>
        <label>Last Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geo_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geo Group Member</label>
    <nameField>
        <displayFormat>GGM-{00000}</displayFormat>
        <label>Geo Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>